# b_tech

./: .gitignore  README.md  my_tree.c
DSA/: new.c  sparse.c
DSA/Assignment1/: DSA_Assignment1.1.h  DSA_Assignment1.3.1 - Copy.h  DSA_Assignment1.3.2.h  DSA_Assignment1.4.h  DSA_Assignment1.7 - Copy.h
DSA/Assignment2/: DSA_Assignment2.3.c  DSA_Assignment2.4.c  DSA_Assignment2.5.c  DSA_Assignment2.6  DSA_Assignment2.8.c
DSA/Assignment6/: List.c  MatrixDiff.txt  MatrixSum.txt  main.c
DSA/Assignment7/: list_stack.c  tempCodeRunnerFile.c
DSA/DSA_Assignment_6/: List.c
DSA/Final_Practice/: Circular.c  Doubly.c  Queue_Linked_List.c  Untitled-1.c  my_array_2.c  my_circular.c  my_dll_2.c  my_ll_2.c  my_stack_array.c  stack_using_array.c  tempCodeRunnerFile.cpp
DSA/Pointers/: pointer1.c  pointer3.c
DSA/Practice/: loops1.c  loops2.c  revereseNum.c  tempCodeRunnerFile.c
PP/: Longest_conse_nonDups.cpp  a.out  abc.cpp  encodeDecode.cpp  fragmentation.cpp  inverttree.cpp  listoflist.cpp  longest_repeating_char_replacement.cpp  palin.cpp  split_ll_in_parts.cpp  star  tender_carpenter.cpp  test.cpp  valid_paranthesis_stack
PP/Binary_Search/: a.out  (+4 more)
PPL/: Assignment1 - Copy.docx  Assignment1.docx  Assignment2 - Copy.docx  Assignment2.docx  Assignment4 - Copy.docx
Placement_Practice/: Longest_Consecutive_Sequence  Longest_Consecutive_Sequence.cpp  Longest_conse_nonDups  a.out  encodeDecode  encodeDecode.cpp  maxArea  maxArea.cpp  neetCoin  twoSum_twoPointer  twoSum_twoPointer.cpp  valid.cpp  valid_paranthesis_stack.cpp
Sem_5/SE/Ass_10/: CMakeLists.txt  main.cpp
(+657 files in other folders)
